--- a/ember/package.json
+++ b/ember/package.json
@@ -68,6 +68,7 @@
     "ember-cp-validations": "3.5.6",
     "ember-css-modules": "1.3.3",
     "ember-css-modules-sass": "1.1.0",
+    "ember-event-helpers": "^0.1.1",
     "ember-fetch": "8.0.4",
     "ember-flatpickr": "3.0.1",
     "ember-freestyle": "0.12.1",
