--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,8 @@ x-api: &api
   volumes:
     - .:/home/skylines/code/
   depends_on:
-    db:
-      condition: service_healthy
-    redis:
-      condition: service_healthy
+    - db
+    - redis
 
 
 services:
