Pin top-level dependencies and update transitive dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -10,37 +10,37 @@ python_version = "2.7"
 manage = "./manage.py"
 
 [packages]
-flask = "==1.0.*"
+flask = "==1.0.3"
 babel = "==2.7.0"
-flask-caching = "==1.7.*"
-flask-migrate = "*"
+flask-caching = "==1.7.2"
+flask-migrate = "==2.4.0"
 flask-script = "==0.6.7"
-flask-sqlalchemy = "*"
+flask-sqlalchemy = "==2.4.0"
 "psycopg2" = "==2.8.2"
-"geoalchemy2" = "*"
+"geoalchemy2" = "==0.6.3"
 shapely = "==1.6.4.post2"
 "crc16" = "==0.1.1"
-pytz = "*"
-celery = {extras = ["redis"],version = "<3.2,>=3.1"}
-redis = "<3.0"
+pytz = "==2019.1"
+celery = { version = "==3.1.26.post2", extras = ["redis"] }
+redis = "==2.10.6"
 xcsoar = "==0.7.0"
 aerofiles = "==1.0.0"
 "enum34" = "==1.1.6"
 pyproj = "==1.9.6"
 gevent = "==1.4.0"
-webargs = "*"
-flask-oauthlib = "*"
-requests-oauthlib = ">=0.6.2,<1.2.0"  # see https://github.com/lepture/flask-oauthlib/pull/388
-sentry-sdk = {extras = ["flask"],version = "==0.12.3"}
-mapproxy = "*"
-gunicorn = "*"
+webargs = "==5.3.0"
+flask-oauthlib = "==0.9.6"
+sentry-sdk = { version = "==0.12.3", extras = ["flask"] }
+mapproxy = "==1.11.0"
+gunicorn = "==19.9.0"
 requests = "==2.22.0"
 
 [dev-packages]
+coverage = "==4.5.3"
 fabric = "==1.14.0"
 pytest = "==4.4.1"
 pytest-cov = "==2.6.1"
-pytest-voluptuous = "*"
+pytest-voluptuous = "==1.1.0"
 mock = "==3.0.5"
 faker = "==2.0.2"
 "flake8" = "==3.7.7"
