Pipfile: Remove unnecessary quotes

--- a/Pipfile
+++ b/Pipfile
@@ -13,19 +13,19 @@ manage = "./manage.py"
 aerofiles = "==1.0.0"
 babel = "==2.7.0"
 celery = { version = "==3.1.26.post2", extras = ["redis"] }
-"crc16" = "==0.1.1"
-"enum34" = "==1.1.6"
+crc16 = "==0.1.1"
+enum34 = "==1.1.6"
 flask = "==1.0.3"
 flask-caching = "==1.7.2"
 flask-migrate = "==2.4.0"
 flask-oauthlib = "==0.9.6"
 flask-script = "==0.6.7"
 flask-sqlalchemy = "==2.4.0"
-"geoalchemy2" = "==0.6.3"
+geoalchemy2 = "==0.6.3"
 gevent = "==1.4.0"
 gunicorn = "==19.9.0"
 mapproxy = "==1.11.0"
-"psycopg2" = "==2.8.2"
+psycopg2 = "==2.8.2"
 pyproj = "==1.9.6"
 pytz = "==2019.1"
 redis = "==2.10.6"
@@ -39,7 +39,7 @@ xcsoar = "==0.7.0"
 coverage = "==4.5.3"
 fabric = "==1.14.0"
 faker = "==2.0.2"
-"flake8" = "==3.7.7"
+flake8 = "==3.7.7"
 immobilus = "==1.4.3"
 mock = "==3.0.5"
 pytest = "==4.4.1"
