--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ requests = "==2.22.0"
 sentry-sdk = { version = "==0.12.3", extras = ["flask"] }
 shapely = "==1.6.4.post2"
 webargs = "==5.3.0"
+werkzeug = "==0.15.3"
 xcsoar = "==0.7.0"
 
 [dev-packages]
