--- a/Pipfile
+++ b/Pipfile
@@ -43,6 +43,7 @@ faker = "==2.0.2"
 flake8 = "==3.7.7"
 immobilus = "==1.4.3"
 mock = "==3.0.5"
+more_itertools = "==5.0.0"
 pytest = "==4.4.1"
 pytest-cov = "==2.6.1"
 pytest-voluptuous = "==1.1.0"
