Containerize full stack with multi-stage Docker build
Rewrite the Docker setup so the entire SkyLines stack (frontend build,
API, Celery worker, tracking server, MapProxy, reverse proxy) runs
with a single `docker compose up` on any modern host.

- Multi-stage Dockerfile: node:14-buster builds the Ember frontend,
  debian:buster-slim provides Python 2.7 + MapServer for the backend
- docker-compose.yml with 7 services: db (PostGIS), redis, api, worker,
  tracking, mapproxy, caddy, plus a migrate init container
- config/docker.py with env-var-driven DATABASE_URL, REDIS_URL, paths
- docker/Caddyfile with Caddy v2 reverse proxy config
- docker-compose.override.yml for development (source mounts, dev server)
- .dockerignore to keep build context small
- Cursor rules documenting project structure and conventions

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,43 @@
-.cache/
+.git
+.gitignore
+.cursor
+.vagrant
+
+# Python artifacts
+__pycache__
+*.py[cod]
+*.egg-info
+*.egg
+.eggs
+.tox
+.cache
+.pytest_cache
 .coverage
-.envrc
-.git/
-.github/
-.idea/
-.local/
-.vagrant/
-ember/node_modules/
-htdocs/
+.coverage.*
+htmlcov
+coverage.xml
+
+# Node / frontend build artifacts
+ember/node_modules
+ember/bower_components
+ember/tmp
+ember/dist
+skylines/frontend/static
+
+# Generated data
+htdocs
+mapproxy/cache_data
+postgres_data
+
+# Docs and meta
+*.md
+!ember/README.md
+LICENSE
+PRIVACY.md
+
+# Logs
+*.log
+
+# IDE
+.vscode
+.idea
