--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
       - uses: volta-cli/action@v4
 
       - run: yarn install --frozen-lockfile
@@ -49,6 +52,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
       - uses: volta-cli/action@v4
 
       - run: yarn install --frozen-lockfile
@@ -94,6 +100,7 @@ jobs:
       PGHOST: db
       PGUSER: postgres
       PGPASSWORD: postgres
+      REDIS_URL: redis://redis:6379/0
 
     steps:
       - name: Install system dependencies
